# nba-news-scraper

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci-cd.yaml  deploy.yaml
backend/: Dockerfile  go.mod  main.go
backend/asset/: index.html  story.html
backend/config/: db.go
backend/controllers/: story.go  story_test.go
backend/models/: story.go
backend/routes/: story.go
database/: Dockerfile
scraper/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
scraper/app/: config.py  init_models.py  main.py
scraper/app/core/: db.py  downloader.py  logger.py  parser.py  scheduler.py  scraper.py  storage.py  utils.py
scraper/app/core/targets/: index.json  story.json
scraper/app/model/: index.py  story.py
scraper/tests/app/core/: test_downloader.py  test_parser.py  test_scraper.py
scraper/tests/data/: sample_index.html  sample_story.html
